<resources>
    <string name="app_name">Corona Admin</string>
    <string name="Otp_verification">Otp சரிபார்ப்பு</string>
    <string name="submit">சமர்ப்பிக்கவும்</string>
    <string name="covid_19_tracker">கோவிட் -19 டிராக்கர்</string>
    <string name="No_network">நெட்வொர்க் இல்லை</string>
    <string name="Check_internet">உங்கள் இணைய இணைப்பைச் சரிபார்க்கவும்.\nமீண்டும் முயற்சிக்கவும்.</string>
    <string name="refresh">புதுப்பிப்பு முயற்சி</string>
    <string name="user_details">பயனர் விவரங்கள்</string>
    <string name="name">பெயர்</string>
    <string name="name_s">பெயர் :</string>
    <string name="age">வயது</string>
    <string name="age_s">வயது :</string>
    <string name="gender">பாலினம்</string>
    <string name="gender_s">பாலினம் :</string>
    <string name="blood_type">இரத்த வகை</string>
    <string name="blood_type_s">இரத்த வகை :</string>
    <string name="phone">தொலைபேசி எண்</string>
    <string name="phone_s">தொலைபேசி எண் :</string>
    <string name="verify_number">எண் சரிபார்ப்பு</string>
    <string name="india">இந்தியா :</string>
    <string name="tamilnadu">தமிழ்நாடு :</string>
    <string name="district">மாவட்டம் :</string>
    <string name="date">தேதி :</string>
    <string name="overall">ஒட்டுமொத்த :</string>
    <string name="active">பாதிப்பு :</string>
    <string name="recovered">குணம் :</string>
    <string name="death">இறப்பு :</string>
    <string name="new_active">புதிய பாதிப்பு :</string>
    <string name="new_recovered">புதிய குணம் :</string>
    <string name="new_death">புதிய இறப்பு :</string>
    <string name="search">தேடு</string>
    <string name="language">மொழி</string>
    <string name="tamil">தமிழ்</string>
    <string name="sign_up_page">பதிவுபெறும் பக்கம்</string>
    <string name="email">மின்னஞ்சல்</string>
    <string name="password">கடவுச்சொல்</string>
    <string name="reenter">கடவுச்சொல் உறுதிப்படுத்தவும்</string>
    <string name="confirm">உறுதிப்படுத்தவும்</string>
    <string name="sign_up">பதிவுசெய்க</string>
    <string name="filter_user">பயனர் வடிப்பான்</string>
    <string name="location">இடம்</string>
    <string name="location_s">இடம் :</string>
    <string name="location_details">இடவிவரங்கள்</string>
    <string name="city">நகரம்</string>
    <string name="pincode">அஞ்சல் குறியீடு்</string>
    <string name="login_page">உள்நுழைவு பக்கம்</string>
    <string name="number">எண் :</string>
    <string name="today">இன்று</string>
    <string name="user_history">பயனர் வரலாறு</string>
    <string name="temp">வெப்பம் :</string>
    <string name="time">நேரம் :</string>

</resources>