<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.corona_admin.HistoryFilterActivity">

    <!--    header part-->

    <View
        android:id="@+id/pageHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@color/purple" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/pageHeader"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/cadman_normal"
        android:text="@string/filter_user"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />

    <!--    header end-->

    <!--    body part-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/pageHeader"
        android:layout_marginBottom="@dimen/_40sdp">

        <RelativeLayout
            android:id="@+id/locationRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_55sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/bellota"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <ImageView
                android:id="@+id/boxAsset1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/box_sp_asset" />

            <AutoCompleteTextView
                android:id="@+id/locationET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/boxAsset1"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:backgroundTint="@color/grey"
                android:maxLines="1"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dateRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/locationRL"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_55sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/bellota"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <ImageView
                android:id="@+id/boxAsset2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/box_asset" />

            <EditText
                android:id="@+id/dateET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="  DD/MM/YYYY"
                android:layout_alignBottom="@id/boxAsset2"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:backgroundTint="@color/grey"
                android:maxLines="1"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>

        <Button
            android:id="@+id/searchBT"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@id/dateRL"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/rectangle_asset"
            android:fontFamily="@font/cadman_normal"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/searchBT"
            android:layout_marginTop="@dimen/_15sdp"
            android:padding="@dimen/_15sdp" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/progressIV"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@drawable/loading_asset"
            android:visibility="gone" />

    </RelativeLayout>


    <!--    body end-->

    <View
        android:id="@+id/pageTrailing"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/purple" />

</RelativeLayout>