<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!--    header part-->

    <View
        android:id="@+id/pageHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@color/purple" />

    <LinearLayout
        android:id="@+id/headerRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/pageHeader"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/languageTV"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/_10sdp"
            android:tint="@color/white"
            app:srcCompat="@drawable/lanuage" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="@font/cadman_normal"
            android:text="@string/user_details"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/_16sdp" />

        <ImageView
            android:id="@+id/searchIV"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            app:srcCompat="@drawable/search_asset"
            android:layout_gravity="center_vertical"
            android:tint="@color/white" />

        <ImageView
            android:id="@+id/logoutIV"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_toLeftOf="@id/searchIV"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/_5sdp"
            app:srcCompat="@drawable/signout_asset"
            android:tint="@color/white" />

    </LinearLayout>


    <!--    header end-->

    <!--    body part-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/pageHeader"
        android:layout_marginBottom="@dimen/_40sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/countryCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_20sdp">

                    <TextView
                        android:id="@+id/dateTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cadman_normal"
                        android:text="@string/date"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:background="@drawable/rectangle_asset"
                            android:backgroundTint="@color/grey"
                            android:padding="@dimen/_5sdp">

                            <TextView
                                android:id="@+id/overallTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="@dimen/_7sdp"
                                android:fontFamily="@font/cadman_normal"
                                android:text="@string/overall"
                                android:textColor="@color/mid_grey"
                                android:textSize="@dimen/_10sdp" />

                            <TextView
                                android:id="@+id/overallTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/overallTitle"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="@dimen/_7sdp"
                                android:fontFamily="@font/cadman_normal"
                                android:text=""
                                android:textColor="@color/dark_grey"
                                android:textSize="@dimen/_18sdp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:background="@drawable/rectangle_asset"
                            android:backgroundTint="@color/grey"
                            android:padding="@dimen/_10sdp">

                            <TextView
                                android:id="@+id/activeTtile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="@dimen/_7sdp"
                                android:fontFamily="@font/cadman_normal"
                                android:text="@string/today"
                                android:textColor="@color/mid_grey"
                                android:textSize="@dimen/_12sdp" />

                            <TextView
                                android:id="@+id/todayTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/activeTtile"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="@dimen/_7sdp"
                                android:fontFamily="@font/cadman_normal"
                                android:text=""
                                android:textColor="@color/dark_grey"
                                android:textSize="@dimen/_18sdp" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/graphCV"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:layout_below="@id/countryCard"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.anychart.AnyChartView
                        android:id="@+id/chartViewCV"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_250sdp" />
                    <View
                        android:layout_alignParentBottom="true"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_alignParentRight="true"
                        android:layout_height="@dimen/_15sdp"
                        android:background="@color/white"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <!--    body end-->
    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/progressIV"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/loading_asset"
        android:visibility="gone" />

    <View
        android:id="@+id/pageTrailing"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/purple" />

</RelativeLayout>